[package]
name = "torajs-playground-api"
version = "0.1.0"
edition = "2024"

# T-22.b (v0.6.0) — HTTP API for torajs.com/playground.
# `POST /api/run` accepts user TS source, compiles via `tr build`,
# runs the resulting wasm under wasmtime with strict resource caps,
# and returns captured stdout/stderr. Sandboxed via wasmtime's fuel
# limit + wall-clock timeout + tempdir per request; rate-limited via
# tower's GovernorLayer.

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower_governor = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
