[package]
name = "torajs-playground-api"
version = "0.1.0"
edition = "2024"

# T-22.b (v0.6.0) — HTTP API for torajs.com/playground.
# `POST /api/run` accepts user TS source, compiles via `tr build`,
# runs the resulting wasm under wasmtime with strict resource caps,
# and returns captured stdout/stderr. Sandboxed via wasmtime's fuel
# limit + wall-clock timeout + tempdir per request; rate-limited via
# tower's GovernorLayer.

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# F.1 (2026-05-25, Phase 2 F 族 first crate): replaced `hex 0.4` community
# dep with the in-tree `torajs-codec-hex` impl. Same hex::encode/decode
# surface, byte-identical output, 0 transitive deps.
torajs-codec-hex = { path = "../torajs-codec-hex" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower_governor = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
